tests/snapshots/examples_basics/arithmetic.snap
---
source: tests/examples_basics_snapshots.rs
---
Fixture: examples/basics/arithmetic.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/arithmetic.flx:9:1
  |
9 | print(1 + 2);
  | ^^^^^^^^^^^^^
  | ------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E414]: MISSING MAIN FUNCTION

Effectful program is missing `fn main` root effect handler.

  --> examples/basics/arithmetic.flx:9:1
  |
9 | print(1 + 2);
  | ^^^^^^^^^^^^^
  | ------------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/arithmetic.flx:10:1
   |
10 | print(10 - 3);
   | ^^^^^^^^^^^^^^
   | -------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/arithmetic.flx:11:1
   |
11 | print(4 * 5);
   | ^^^^^^^^^^^^^
   | ------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/arithmetic.flx:12:1
   |
12 | print(15 / 3);
   | ^^^^^^^^^^^^^^
   | -------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/arithmetic.flx:13:1
   |
13 | print(2 + 3 * 4);
   | ^^^^^^^^^^^^^^^^^
   | ----------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/arithmetic.flx:15:1
   |
15 | print(10 % 3);
   | ^^^^^^^^^^^^^^
   | -------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/arithmetic.flx:16:1
   |
16 | print(7 % 2);
   | ^^^^^^^^^^^^^
   | ------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/arithmetic.flx:17:1
   |
17 | print(8 % 2);
   | ^^^^^^^^^^^^^
   | ------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/arithmetic.flx:18:1
   |
18 | print(10.5 % 3);
   | ^^^^^^^^^^^^^^^^
   | ---------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E300]: TYPE UNIFICATION ERROR

Cannot unify Float with Int.

  --> examples/basics/arithmetic.flx:18:7
   |
18 | print(10.5 % 3);
   |       ^^^^^^^^
   |       -------- expected Float, found Int

Found 11 errors.
== stdout ==
<not executed>
