tests/snapshots/examples_basics/array_builtins.snap
---
source: tests/examples_basics_snapshots.rs
---
Fixture: examples/basics/array_builtins.flx
== compile ==
failed (module)
== diagnostics ==
error[E018]: Import Not Found

Cannot find module `Flow.Array` to import.

  examples/basics/array_builtins.flx:1:1
  |
1 | import Flow.Array as Array
  | ^

Hint:
  Check that: 1) The module file exists (e.g., `Flow.Array.flx`), 2) The file is in a module root directory (current dir or ./src by default), 3) The module path matches the file structure (e.g., `Foo.Bar` → `Foo/Bar.flx`). Use `--root` flag to add more search paths.
  Looked for module `Flow.Array` under roots: examples/basics, src (imported from examples/basics/array_builtins.flx).
== stdout ==
<not executed>
