tests/snapshots/examples_basics/arrays_basic.snap
---
source: tests/examples_basics_snapshots.rs
---
Fixture: examples/basics/arrays_basic.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/arrays_basic.flx:12:1
   |
12 | print(arr);
   | ^^^^^^^^^^^
   | ----------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E414]: MISSING MAIN FUNCTION

Effectful program is missing `fn main` root effect handler.

  --> examples/basics/arrays_basic.flx:12:1
   |
12 | print(arr);
   | ^^^^^^^^^^^
   | ----------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/arrays_basic.flx:16:1
   |
16 | print(empty);
   | ^^^^^^^^^^^^^
   | ------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/arrays_basic.flx:20:1
   |
20 | print(nums);
   | ^^^^^^^^^^^^
   | ------------ top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/arrays_basic.flx:24:1
   |
24 | print(mixed[0]);
   | ^^^^^^^^^^^^^^^^
   | ---------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/arrays_basic.flx:25:1
   |
25 | print(mixed[1]);
   | ^^^^^^^^^^^^^^^^
   | ---------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/arrays_basic.flx:26:1
   |
26 | print(mixed[2]);
   | ^^^^^^^^^^^^^^^^
   | ---------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/arrays_basic.flx:31:1
   |
31 | print(concat(left, right));
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | --------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/arrays_basic.flx:35:1
   |
35 | print(reverse(reverse_arr));
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ---------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/arrays_basic.flx:37:1
   |
37 | print(contains(reverse_arr, 10));
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | --------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/arrays_basic.flx:38:1
   |
38 | print(contains(reverse_arr, 0));
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | -------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/arrays_basic.flx:40:1
   |
40 | print(slice(reverse_arr, 0, 3));
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | -------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/arrays_basic.flx:44:1
   |
44 | print(sort(sort_arr));
   | ^^^^^^^^^^^^^^^^^^^^^^
   | ---------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/arrays_basic.flx:46:1
   |
46 | print(join([|"1", "2", "3"|], ","));
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ------------------------------------ top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.

Found 14 errors.
== stdout ==
<not executed>
