tests/snapshots/examples_basics/diagnostic_comment_trim.snap
---
source: tests/examples_basics_snapshots.rs
---
Fixture: examples/basics/diagnostic_comment_trim.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
