tests/snapshots/examples_basics/either_and_option.snap
---
source: tests/examples_basics_snapshots.rs
---
Fixture: examples/basics/either_and_option.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `first`.

  examples/basics/either_and_option.flx:27:16
   |
27 |             if first(arr) == target {
   |                ^^^^^

Hint:
  Define it first: let first = ...;
== stdout ==
<not executed>
